add recordings to API and add ability to read from development tables and buckets in SUpabase
